--- a/j00/ex01/Makefile
+++ b/j00/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: cledant <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/11/26 10:40:13 by cledant           #+#    #+#              #
-#    Updated: 2017/04/03 16:05:32 by cledant          ###   ########.fr        #
+#    Updated: 2017/04/04 21:27:20 by cledant          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ SRCS_PATH = .
 
 INCLUDES_PATH = .
 
-OBJ_SRCS = $(SRCS_NAME:%.c=$(OBJ_DIR_NAME)/%.o)
+OBJ_SRCS = $(SRCS_NAME:%.cpp=$(OBJ_DIR_NAME)/%.o)
 
 NAME = phonebook
 
@@ -31,9 +31,9 @@ all : $(NAME)
 $(NAME) : $(OBJ_SRCS)
 	$(CC) -o $@ $^ $(CFLAGS)
 
-$(OBJ_DIR_NAME)/%.o : $(SRCS_PATH)/%.c
+$(OBJ_DIR_NAME)/%.o : $(SRCS_PATH)/%.cpp
 	mkdir -p $(OBJ_DIR_NAME)
-	$(CC) -o $@ -c $< $(CFLAGS) -I$(INCLUDES)
+	$(CC) -o $@ -c $< $(CFLAGS) -I$(INCLUDES_PATH)
 
 clean :
 	rm -rf $(OBJ_DIR_NAME)
